fix: prevent filter block horizontal scrolling

--- a/src/components/filters/FilterForm.module.less
+++ b/src/components/filters/FilterForm.module.less
@@ -1,6 +1,7 @@
 .wrapper {
   height: calc(100% - 80px);
   overflow-y: scroll;
+  overflow-x: hidden;
 }
 
 .submit {
